# better-tree

./: .gitignore  .pre-commit-config.yaml  README.md  better-tree.psd1  better-tree.psm1  pyproject.toml  requirements.txt
better_tree/: __init__.py  __main__.py  main.py  parser.py
docs/: examples.md
tree/: __init__.py  __main__.py  console.py  rich_tree.py
